# Gateway

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
.github/workflows/: docker-image-ci.yml
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  models.rs  snapshot.rs  state.rs  validation.rs
crates/common/src/entities/: acme_accounts.rs  audit_logs.rs  certificates.rs  config_versions.rs  listeners.rs  mod.rs  node_status.rs  routes.rs  tls_policies.rs  upstream_pools.rs  upstream_targets.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: acme.rs  api.rs  db.rs  error.rs  main.rs  metrics.rs  state.rs  transaction.rs
crates/data-plane/: Cargo.toml
crates/data-plane/src/: health.rs  main.rs  metrics.rs  node.rs  proxy.rs  tls.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260118_000001_init.rs  m20260118_000002_acme.rs  m20260120_000004_audit_logs_text.rs
deploy/: Dockerfile  entrypoint.sh
docs/: api.md  design.md  ops.md  schema.md  web-style.md
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: index.css  main.tsx
web/src/app/: App.tsx  routes.tsx
web/src/app/layout/: AppShell.tsx  AppSidebar.tsx
web/src/app/theme/: ThemeProvider.tsx
web/src/components/: ActorSwitcher.tsx  DataTable.tsx  SectionHeader.tsx  StatCard.tsx  ThemeSwitcher.tsx
web/src/pages/: Audit.tsx  Dashboard.tsx  Listeners.tsx  Nodes.tsx  Routes.tsx  Tls.tsx  Upstreams.tsx  Versions.tsx
web/src/services/: api.ts  endpoints.ts  types.ts
web/src/shadcn/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  sidebar.tsx  table.tsx  textarea.tsx
