[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/control-plane",
  "crates/data-plane",
  "crates/migration",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1.10.1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
instant-acme = "0.8.4"
pingora = { version = "0.6.0", features = ["proxy"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
x509-parser = "0.18.0"
