[package]
name = "gateway-control-plane"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
instant-acme = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

gateway-common = { path = "../common" }
gateway-migration = { path = "../migration" }
